<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/NombreApp"
        android:layout_width="wrap_content"
        android:layout_height="587dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:text="@string/Nombre_de_mi_app"
        android:textColor="#264653" />

    <TextView
        android:id="@+id/FechaLanzamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NombreApp"
        android:text="@string/Fecha_Lanzamiento_App" />
        />

    <TextView
        android:id="@+id/VersionApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NombreApp"
        android:orientation="horizontal"
        android:text="@string/version_app"
        android:textColor="#2a9d8f"
        />

</LinearLayout>